iptables
# Generated by iptables-save v1.4.7 on Fri Mar 16 16:04:38 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [103:9270]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1883 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1880 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8083 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8888 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4040 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4444 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3000 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 465 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 27017 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5666 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 2232 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Fri Mar 16 16:04:38 2018
# Generated by iptables-save v1.4.7 on Fri Mar 16 16:04:38 2018
*nat
:PREROUTING ACCEPT [29038:2343490]
:POSTROUTING ACCEPT [4295:259325]
:OUTPUT ACCEPT [4295:259325]
COMMIT
# Completed on Fri Mar 16 16:04:38 2018
# Generated by iptables-save v1.4.7 on Fri Mar 16 16:04:38 2018
*raw
:PREROUTING ACCEPT [109989:283813718]
:OUTPUT ACCEPT [81867:295521688]
COMMIT
# Completed on Fri Mar 16 16:04:38 2018
# Generated by iptables-save v1.4.7 on Fri Mar 16 16:04:38 2018
*mangle
:PREROUTING ACCEPT [109989:283813718]
:INPUT ACCEPT [95896:282566770]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [81867:295521688]
:POSTROUTING ACCEPT [81867:295521688]
COMMIT
# Completed on Fri Mar 16 16:04:38 2018
